--- a/web/src/Components/Product/ProductComponent.scss
+++ b/web/src/Components/Product/ProductComponent.scss
@@ -3,10 +3,11 @@
   padding: 0.5rem !important;
   color: #001c44 !important;
   .card_item__icons {
+    margin: 1rem 0 !important;
     display: flex;
     flex-wrap: wrap;
     .card_item__icons__icon {
-      padding: 0.3rem;
+      padding: 0.5rem;
       .card_item__icons__icon--width {
         width: 20px;
       }
@@ -27,39 +28,14 @@
     }
   }
 }
-// Đây là định dạng cho các product hiển thị trong Recommend product
-.Stack {
-  display: flex;
-  padding: 0.5rem;
-  .Stack__img {
-    width: 75%;
-    height: 75%;
-    margin-right: 0.5rem;
-  }
-  .Stack__info {
-    .Stack__info__model {
-    }
-    .Stack__info__price {
-      display: flex;
-      font-weight: bolder;
-      justify-content: space-around;
-      .Stack__info__price--new {
-        margin-right: 1rem;
-      }
-      .Stack__info__price--old {
-        text-decoration: line-through;
-      }
-    }
-  }
-}
 
 // Đây là tên danh mục lớn trước khi hiển thị một danh sách Card product
 .catergory_label {
   display: flex;
   justify-content: space-evenly;
-  padding-bottom: 1rem;
+  padding: 1.5rem;
   font-size: xx-large;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.7rem;
   color: #001c44;
   text-transform: capitalize;
 }
@@ -69,42 +45,153 @@
   display: flex;
   flex-wrap: wrap;
   color: #001c44;
+  margin: 2rem 0 !important;
 
   .row_detail__recommend {
-    margin-top: 1rem;
-    margin-right: 2rem;
+    margin-right: 2rem !important;
     text-transform: capitalize;
   }
   .row_detail__mainimg {
     display: flex;
-    justify-content: center;
-    padding-top: 1rem;
+    align-items: center;
     .row_detail__mainimg--width {
       width: 100%;
+      height: 75%;
     }
   }
   .row_detail__description {
-    font-size: larger;
-    margin-top: 1rem;
+    margin-top: 1rem !important;
     display: flex;
     flex-direction: column;
+
     .row_detail__description--name {
-      text-transform: uppercase;
+      text-transform: capitalize;
+      font-size: x-large;
     }
     .row_detail__description__price {
+      font-size: large;
       display: flex;
       flex-direction: row;
-      margin-top: 1rem;
+      margin-top: 0.7rem !important;
+
       .row_detail__description__price--new {
-        margin-right: 2rem;
+        margin-left: 1rem !important;
+        margin-right: 2rem !important;
       }
       .row_detail__description__price--old {
         text-decoration: line-through;
       }
     }
     .row_detail__description--fontInfo {
-      // text-decoration: none;
-      font-size: smaller;
+      margin: 1rem !important;
+      text-align: justify;
+      text-justify: inter-word;
+    }
+    .row_detail__description__amount {
+      margin-top: 1rem !important;
+      .row_detail__description__amount--cart {
+        border-radius: 2rem;
+        padding: 0.5rem 1.5rem;
+        margin-left: 3rem !important;
+      }
+      .row_detail__description__amount--quantity {
+        text-align: center;
+        width: 3rem;
+        height: 2rem;
+      }
+      .row_detail__description__amount--plus {
+        height: 2rem;
+      }
+      .row_detail__description__amount--minus {
+        height: 2rem;
+        margin-left: 1rem !important;
+      }
+    }
+  }
+}
+
+// Đây là định dạng cho các product hiển thị trong Recommend product
+.Stack {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem !important;
+  .Stack__img {
+    width: 50%;
+    margin-right: 0.5rem !important;
+  }
+  .Stack__info {
+    .Stack__info__price {
+      font-size: small;
+      display: flex;
+      text-transform: lowercase;
+      .Stack__info__price--new {
+        color: red;
+        margin-right: 0.7rem !important;
+      }
+      .Stack__info__price--old {
+        text-decoration: line-through;
+      }
+    }
+  }
+}
+
+// Định dạng cho các Tab của trang chi tiết sản phẩm
+//Tab Rating
+.tab-section {
+  width: inherit;
+  margin-bottom: 1rem !important;
+  .tab-section__item {
+    display: flex !important;
+    flex-direction: column;
+    text-align: center;
+    .tab-section__item--stars {
+      margin: 1rem !important;
+    }
+  }
+}
+//Tab thông số
+.product-tab {
+  margin: 1rem 2rem !important;
+  .product-tab--head {
+    text-transform: capitalize;
+    color: green;
+    margin: 0.3rem 0 !important;
+  }
+
+  .product-tab__1col {
+    margin: 1rem 0 !important;
+    width: 100%;
+    .product-tab__1col--item {
+      padding: 0.5rem;
+    }
+  }
+
+  .product-tab__2col {
+    display: flex !important;
+    flex-direction: row !important;
+    padding-top: 0.5rem;
+
+    .product-tab__2col--item {
+      display: inline-block;
+      width: 50%;
+      padding-bottom: 1rem;
+    }
+  }
+}
+
+// Info Tab
+.info-tab {
+  position: relative;
+  top: -3rem;
+  left: 3rem;
+  .info-tab__row {
+    display: flex !important;
+    flex-direction: row !important;
+    align-items: center !important;
+    .info-tab__row--item {
+      display: inline-block;
+      width: 50%;
+      padding-bottom: 1rem;
     }
   }
 }
