--- a/web/src/Components/Loading/Loading.css
+++ b/web/src/Components/Loading/Loading.css
@@ -4,8 +4,8 @@
 }
 
 .section-loading {
-  height: 100vh;
-  width: 100vw;
+  height: 100vh !important;
+  width: 100vw !important;
 
   display: flex;
   align-items: center;
@@ -19,15 +19,15 @@
 }
 
 .section-loading ul.list-bars li {
-  margin: 0 7px;
-  width: 8px;
+  margin: 0 .7rem !important;
+  width: .7rem;
   border-radius: 10px;
   background-color: #fff;
   animation: animate 0.8s infinite alternate;
 }
 .section-loading ul.list-bars li:nth-child(odd) {
-  height: 80px;
-  animation-delay: 0.6s;
+  height: 100px;
+  animation-delay: .6s;
 }
 .section-loading ul.list-bars li:nth-child(even) {
   height: 20px;
@@ -38,6 +38,6 @@
     height: 5px;
   }
   to {
-    height: 70px;
+    height: 90px;
   }
 }
