--- a/web/src/Components/Cart/style.scss
+++ b/web/src/Components/Cart/style.scss
@@ -1,15 +1,30 @@
 .cart {
   padding: 2rem;
   text-align: center;
+  .cart__label {
+    color: #1f4690;
+    text-align: center;
+    .cart__label__btn {
+      width: 100%;
+    }
+  }
   .cart__row {
     display: flex !important;
     align-items: center;
     margin-top: 1rem !important ;
     justify-content: center;
-    .cart__row__grpbtn__btn {
-      min-width: 6rem;
-      margin-right: 0.5rem !important;
+    .cart__row__grpbtn {
+      display: flex;
+      .cart__row__grpbtn__btn--margin {
+        margin-right: 0.3rem !important;
+        width: 50%;
+      }
+
+      .cart__row__grpbtn__btn {
+        width: 50%;
+      }
     }
+
     .cart__row--strikethrough {
       color: gray;
       text-decoration: line-through;
@@ -17,6 +32,26 @@
     .cart__row__img {
       width: 100%;
       height: 100%;
+    }
+  }
+}
+
+// Định dạng cho ConfirmUserDetail.js
+.confirm {
+  height: 25rem;
+  .confirm__container {
+    height: fit-content;
+    .confirm__container__user {
+      margin-bottom: 1rem !important;
+    }
+    .confirm__container__address {
+      display: flex !important;
+      flex-wrap: wrap;
+      .confirm__container__address__select {
+        width: 25% !important;
+        display: inline-block;
+        margin-left: 1rem !important;
+      }
     }
   }
 }
