--- a/web/src/Components/OrderPage/OrderPage.scss
+++ b/web/src/Components/OrderPage/OrderPage.scss
@@ -34,3 +34,13 @@
     }
   }
 }
+
+.noticeNoneValue {
+  display: flex;
+  width: 100vw;
+  height: 80vh;
+  color: green;
+  align-items: center;
+  justify-content: center;
+  font-size: large;
+}
