--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -3,6 +3,7 @@
   margin: 0 !important;
   font-family: "Hahmlet", serif;
   font-family: "Source Sans Pro", sans-serif;
+  color: #002e5a;
 }
 //CSS ẩn thanh scrollbar
 
@@ -25,6 +26,8 @@
   align-items: center;
   .storeName {
     padding-left: 1rem;
+    font-size: larger;
+    color: #e1dee6 !important;
   }
 }
 
